{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 318,
  "lineage": "0d2d51e8-ccd6-068c-0254-51127626d711",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "iac_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:545029940202:internet-gateway/igw-0cb4119ba56b2a87a",
            "id": "igw-0cb4119ba56b2a87a",
            "owner_id": "545029940202",
            "tags": {
              "Name": "Iac_Network_Gateway"
            },
            "tags_all": {
              "Name": "Iac_Network_Gateway"
            },
            "vpc_id": "vpc-031b1ad7b1a05de39"
          },
          "dependencies": [
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:545029940202:route-table/rtb-0da3ec43cb94bdd07",
            "id": "rtb-0da3ec43cb94bdd07",
            "owner_id": "545029940202",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cb4119ba56b2a87a",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cb4119ba56b2a87a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-031b1ad7b1a05de39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.iac_ig",
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6eda7ee3691b662",
            "route_table_id": "rtb-0da3ec43cb94bdd07",
            "subnet_id": "subnet-04aa88877cb9460a4"
          },
          "dependencies": [
            "aws_internet_gateway.iac_ig",
            "aws_route_table.public_rt",
            "aws_subnet.iac_public_subnet",
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:545029940202:security-group/sg-0ab25c1bf582987ff",
            "description": "Allow SSH Acces",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ab25c1bf582987ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 433,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 433
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ssh-access",
            "name_prefix": "",
            "owner_id": "545029940202",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-031b1ad7b1a05de39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "iac_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:545029940202:subnet/subnet-0c3fe2da02603c7b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3fe2da02603c7b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "545029940202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Iac_LAMP_PRIVATE_SUBNET"
            },
            "tags_all": {
              "Name": "Iac_LAMP_PRIVATE_SUBNET"
            },
            "vpc_id": "vpc-031b1ad7b1a05de39"
          },
          "dependencies": [
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "iac_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:545029940202:subnet/subnet-04aa88877cb9460a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04aa88877cb9460a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "545029940202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Iac_LAMP_SUBNET"
            },
            "tags_all": {
              "Name": "Iac_LAMP_SUBNET"
            },
            "vpc_id": "vpc-031b1ad7b1a05de39"
          },
          "dependencies": [
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "iac_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:545029940202:vpc/vpc-031b1ad7b1a05de39",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-037a5ffc9242ea0fc",
            "default_route_table_id": "rtb-03cd16aeff1d71454",
            "default_security_group_id": "sg-0bccc4c506e2004b2",
            "dhcp_options_id": "dopt-04ca56a749369dc62",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-031b1ad7b1a05de39",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-03eafebc44a05f2ea",
            "ipv6_cidr_block": "2600:1f18:1c08:6a00::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03cd16aeff1d71454",
            "owner_id": "545029940202",
            "tags": {
              "Name": "Iac_LAMP_VPC"
            },
            "tags_all": {
              "Name": "Iac_LAMP_VPC"
            }
          }
        }
      ]
    }
  ]
}